--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    background-color: #0b0b0b;
+    color: white;
+  }
+}
+
+body {
+  font-family: "Sen", sans-serif;
+}
